每日读书/只管去做.md 记录每天体重和饮食

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -271,9 +271,23 @@
 
 
 
-从“怎么做”的战术思考切换到“目的是什么”的战略思考，思考角度转变后，往往会有很大的收获。
+包括我自己听了很多课，订阅了很多专栏，学了很多东西，但为什么依旧没用呢？
+
+这就是因为我一直在抬头看路，没有低头走路；一直在输入信息，没有输出行动。
 
 
+
+**所以需要我们经常在两者之间切换。**
+
+从**“怎么做”**的战术思考切换到**“目的是什么”**的战略思考，思考角度转变后，往往会有很大的收获。
+
+
+
+## 3、1 甘特图：让你抬头看路
+
+做项目也是如此，低头做项目会因为一定要解决某个问题，而忽略了项目的整体进度。
+
+所以我会做一个甘特图和倒排项目清单。
 
 **甘特图：**
 
@@ -281,10 +295,50 @@
 
 
 
-**项目倒排清单：**
+**倒排项目清单：**
 
 搞定清单中的事项，就是在“低头走路”。
 
 
 
-需要我们经常在两者之间切换。
+甘特图的画法：
+
+第一步：准备一张A4纸，在横线上标上12个刻度，表示12个月份
+
+在纵轴上将你今年的目标一一写下来
+
+![image-20250710074705901](https://gitee.com/codergeek/picgo-image/raw/master/image/202507100747604.png)
+
+第二步：填充
+
+预估每个年度目标的起止时间
+
+NetDefenser项目的开始和结束时间是多少？从6月到年底的12月吧。
+
+具体画法是用空心的方框覆盖这个区域，让所有项目的进度一目了然。
+
+
+
+第三步：调整
+
+年度计划不用调整的太频繁，在每月的最后一天更新下这幅甘特图即可。
+
+
+
+实际过程中，可能会发生三种情况：
+
+- 正常推进，把这个月的进度涂成实心即可
+- 超前完成，把超前的部分也涂成实心，下个月可以轻松一点
+- 进度滞后，只涂做完的一小段的进度，提醒自己下个月要抓紧下，赶赶进度
+
+![image-20250710075507326](https://gitee.com/codergeek/picgo-image/raw/master/image/202507100755433.png)
+
+
+
+**甘特图的作用：**
+
+根据上个月的项目的进展调整下个月的计划，提前让你紧张起来，别总是把事情都拖到最后一刻才去补。
+
+可以把这幅图贴在书桌前面，随时提醒你各个项目的进度。
+
+## 3、2 倒推分解法：让你低头走路
