人很易贪多，想做的更多，而忽视了自己的能力

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -342,3 +342,122 @@ NetDefenser项目的开始和结束时间是多少？从6月到年底的12月吧
 可以把这幅图贴在书桌前面，随时提醒你各个项目的进度。
 
 ## 3、2 倒推分解法：让你低头走路
+
+做计划之前，首先要了解你的项目。
+
+从项目的“简单-复杂”和“具体-模糊”两个维度来看，所有的项目可以分为四类：
+
+- 简单具体
+- 复杂具体
+- 简单模糊
+- 复杂模糊
+
+
+
+对于简单具体的事情，没有必要做复杂的计划，我的做法是用“预备，跑”的方式来做这类事情。
+
+
+
+从要实现的目标，从将来的某一天一直倒推到现在才可以。而且越到现在越要明确具体的行动计划。所以你打算未来一周要做什么、明天要做什么？
+
+
+
+为每个项目设置单独的清单，就像一个抽屉放一个项目一样，一个项目建立一个清单。
+
+如果你用纸和笔的话，采用10张纸，用来记录10个项目的待办清单。
+
+这样你多个项目并行处理的时候就不会乱了。
+
+
+
+人都存在三种状态：
+
+- 舒适区，以前做过的，有经验的项目，对自己没什么难度
+- 学习区 ，有一定挑战性，感觉有点不舒服，但不至于恐慌
+- 恐慌区，超出自己能力范围的事情，让我们心里感觉焦虑、恐慌，有可能放弃
+
+
+
+如果计划中的目标处于恐慌区，那么怎么样才能把这个目标顺利搞定呢？
+
+不仅要做项目分解，还要做项目化解。
+
+**项目分解：**
+
+明确完成项目的步骤，主要对项目有一定了解，项目分解还是不难做的。
+
+
+
+**项目化解：**
+
+在项目进行的过程中，会遇到很多难题，比如在写开源项目《基于DPDK的网络入侵检测系统》，我会遇到什么困难呢？
+
+有入侵检测的TCP流重组挑战，需要处理乱序、重传、丢包等TCP复杂情况。
+
+使用RSS网卡多队列技术，来解决同一个会话的所有数据包都分发到同一个cpu上处理的情况。
+
+HTTP、DNS、SMTP等协议解析复杂度高。
+
+
+
+解决这些困难的计划，就是项目化解，这才是你应该花精力去计划的部分。
+
+对项目已经很熟悉，有足够的经验，那么只做项目分解即可；
+
+如果对项目没有经验，也不是很熟悉，那就既需要做项目分解，也要做项目化解。
+
+
+
+马斯克对于火星移民计划，是如何把个人成本从100亿元降低到100万元的呢？
+
+**第一、火箭得是可以重复使用的。**
+
+2015年底，SpaceX实现了火箭发射后，一级火箭的再回收。
+
+
+
+**第二，飞船如果载满整个太空航行需要的燃料发射**，会非常沉重，导致成本高昂。
+
+在太空轨道上，对飞船进行补给。采用这种方式，前往火星的成本降低了500呗。
+
+
+
+**第三，在火星上制造燃料，**让飞船能够从火星返回地球，这样返程的燃料就不需要从地球带了。
+
+
+
+**第四，使用正确的燃料。**
+
+甲烷，因为甲烷在火星上制造起来相对容易。
+
+
+
+经过多轮分析，马斯克将一个天方夜谭的技术难题和资本难题，拆解成了一系列具体的技术问题。
+
+
+
+**如何进行项目化解呢？**
+
+按照两个维度去化解：
+
+1、我如何才能让这件事变得更简单？
+
+2、我如何才能让这件事变得更具体？
+
+说白了，就是把复杂、模糊的目标往学习区拉。
+
+
+
+以写文档为例子，我们经常会遇到思路卡住了，不知道写点什么内容好，或者思路断断续续的无法成体系。
+
+有两种化解方法：
+
+**第一个是让模糊的事情变具体**
+
+比如我写书之前会列大纲，而且至少是三级目录，详细的目录列出来了，模糊的想法就会慢慢完善到清晰，不清晰的地方要通过调研使其清晰。
+
+
+
+**第二个是让复杂的事情变简单**
+
+在写做的过程中卡壳了，不知道怎么写下来，我的做法是立即停笔，出去散散步。
