2025年上半年减肥记录每一天.xlsx 每日读书/只管去做.md

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -461,3 +461,71 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 **第二个是让复杂的事情变简单**
 
 在写做的过程中卡壳了，不知道怎么写下来，我的做法是立即停笔，出去散散步。
+
+有时就会冒出好主意，因为好主意总是在放松的时候产生。
+
+如果想到头疼都没相处好方法，我会去运动，运动会让我们的大脑活跃起来。
+
+
+
+**寻求他人的帮助**
+
+如果实在都不行，我会邀请两个人一起讨论，听听别人对同样事情的思考和看法。
+
+其中一位对我做的事情比较了解，而且有自己独到的见解。
+
+另一位是我的听众，是从读者的角度。
+
+有时自己想半天没懂的事情，别人三言两语就点醒我了。
+
+是因为每个人对同一个问题有不同的角度，而且在交流的过程中会碰撞出更多的角度，相信总有一个角度刚好帮你解开难题。
+
+
+
+**年度目标在舒适区、学习区、恐慌区如何分布才更好呢？**
+
+如果你一年有12个目标的话，那么我的建议是1：2：1的比例进行：
+
+- 3个舒适区的目标
+- 6个学习区的目标
+- 3个恐慌区的目标
+
+这样的年度目标既有挑战，又有享受。
+
+
+
+好的项目计划有三个标准，可以自己衡量下
+
+**首先是坚韧**
+
+接收真实的自己，有点懒，智商一般，有时情绪内耗，简称不完美；
+
+所以在做计划时，要留点缓冲时间，补个B计划啥的，给自己留点余地。
+
+
+
+**其次是简化**
+
+**简：**让复杂的事情变简单。
+
+做项目计划就是把脑袋里很复杂的事情，用纸币让它回归简单。
+
+**化：**将项目中的难题化解掉，这样才不会卡住。
+
+
+
+**最后是解放**
+
+计划到什么程度才算好呢？
+
+能让大脑摆脱某项事务的纠缠，这样的计划就是好的计划。
+
+过度计划让人焦虑——》这么多事情什么时候才能做完啊
+
+不计划也让人焦虑——》事情这么多，接下来先做哪样？该怎么做啊？
+
+脑袋里塞满计划的时候，我们是活在未来的，只有适当的计划才能让大脑忘记这件事，从而才能专注于当下，更加专注。
+
+
+
+# 第四章 如何培养一个好习惯
