每日读书打卡

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -529,3 +529,55 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 
 # 第四章 如何培养一个好习惯
+
+在这个知识付费的时代，不是爱学习的人多了，而是为了缓解内心的焦虑，贩卖焦虑和卖课的人往往是同一批人。
+
+
+
+培养习惯的过程，一共是四个阶段：
+
+1、带着新鲜感和热情开始
+
+2、用方法、技巧、工具坚持下去
+
+3、向内求做事的初心，向外求一些奖赏，来帮助自己突破
+
+4、坚持21天以后，习惯成自然
+
+有了这幅图，在培养习惯的过程中，就知道自己处于培养习惯的哪个阶段，下一个阶段是什么，需要做什么样的准备进入下一个阶段，这样心里就不会具足无措。
+
+
+
+仅仅靠热度和激情就能培养起来习惯，是不可能的。
+
+
+
+《习惯的力量》读书笔记
+
+**第一，人生是无数习惯的组成**
+
+早上的洗脸，刷牙
+
+去公司的路上，做哪条路
+
+中午喜欢去什么餐厅吃饭
+
+下班去什么地方去运动，多久运动一次
+
+这些都是习惯的结果。
+
+
+
+**第二，养成习惯的秘密：习惯回路**
+
+习惯是这样产生的：首先我们会收到某种暗示，然后就会产生惯性行为，接着获得奖赏。
+
+下次我们收到同样暗示的时候，还会产生惯常行为，整个回路是有内心产生的。
+
+平时坐地铁或者等公交等无聊时，想做点什么来打发时间，然后我们看手机打发时间，短视频，读书app，电视剧等，奖赏就是愉快的打发了时间，下次再无聊时，你还是走习惯回路来耍手机的。
+
+
+
+**第三，习惯不能被消除，却能被替代**
+
+想改掉无聊时看手机的习惯，我们可以改为听音乐，这种做法没有改变暗示，我们依旧会无聊，也没有改变奖赏，听音乐时候我们也会觉得时间过的很快，我们只是改变了习惯行为而已。
