每日读书打卡

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -530,6 +530,8 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 # 第四章 如何培养一个好习惯
 
+## 4、1 三分钟热度是怎么回事？
+
 在这个知识付费的时代，不是爱学习的人多了，而是为了缓解内心的焦虑，贩卖焦虑和卖课的人往往是同一批人。
 
 
@@ -581,3 +583,159 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 **第三，习惯不能被消除，却能被替代**
 
 想改掉无聊时看手机的习惯，我们可以改为听音乐，这种做法没有改变暗示，我们依旧会无聊，也没有改变奖赏，听音乐时候我们也会觉得时间过的很快，我们只是改变了习惯行为而已。
+
+
+
+## 4、2 培养习惯的燃料
+
+### **首先我会找出真正想培养的习惯，而不是把时间浪费在一时的冲动上。**
+
+培养习惯的燃料有两个，一个是热情，一个是痛苦。
+
+将习惯赋予更深的意义。
+
+我对一件事越有热情，越是容易养成习惯。
+
+
+
+那么如何才能找出自己真正想培养的习惯呢？
+
+![image-20250713085846962](https://gitee.com/codergeek/picgo-image/raw/master/image/202507130902959.png)
+
+画一个表格，左边三个是你要培养的习惯，中间三列分别是痛苦、热情和时机：
+
+**痛苦：**做这件事解决我哪些痛苦？那种痛苦有多深？
+
+**热情：**做这件事的动力是什么？有多强烈？非常强烈打10分
+
+**时机：**眼下是否适合做这件事。特别适合就打10分
+
+现在你横向把每个习惯的得分加起来，就能找到你最想养成的那个习惯了。
+
+这个表格能把你内心想法投射和量化出来，比较靠谱，同事调动你的理性思维，这样更容易做出选择。
+
+
+
+时间管理真的不是在做加法而是在做减法。
+
+### **其次是仪式感**
+
+原因有三点：
+
+第一，仪式感让弹性时间变为硬性时间
+
+你过去培养习惯的时间可能是弹性的，也就是下班之后有时间就读书，所以一般是没时间。
+
+仪式感就相当于把每天培养习惯的时间预支出去了，我一定要在这段时间里读书，这样一切都会为这段时间让路。
+
+
+
+**第二，仪式感让人不假思索**
+
+有时，行动力差的重要原因是想的太多了。
+
+每到公司我都有固定流程：打开电脑，倒杯水，活动一下身体，把今日待办事项清单摆在左边，右边放一个本子随时记录想法，设置一个25分钟的番茄始终，开始工作，想想就是很高效的状态。
+
+
+
+**第三，仪式感给人神圣感**
+
+我的做法是做一张习惯培养卡片。
+
+
+
+公式：
+
+- 初心和动力（为什么做） 
+- 触发条件（什么时候做） 
+- 具体事项（每天编码十行）
+- 何时达成目标算成功，让人感觉能实现
+- 突发情况的应对措施 
+- 庆祝每一次进步
+
+
+
+实际案例：
+
+为了有效提升我的个人编码技能帮我度过35岁危机（初心和动力），在每天蹲马步后（触发条件），快快乐乐的编写10行代码（清晰具体的事项）。
+
+如果**连续21天**每天编码10行或者阅读10行代码，习惯就算培养成功（让你够的到的成功边界），
+
+我会奖励自己一件礼物作为庆祝，更好的鼓励自己培养下一个习惯（学习奖励自己）。
+
+如果加班没时间写，我会将自主写十行代码改为抄写十行代码（应对突发情况）；
+
+如果手边没有电脑，我会将编写代码改为阅读十行代码；
+
+如果晚上有聚会，我会选择在白天把代码先写完；
+
+如果不不知道写什么代码，我会在笔记本上的计划表中提前规划好待办清单。
+
+
+
+**初心：**内心无比渴望成为实战性高手，实战能力在ai时代尤为重要，还能帮我有机会度过35岁危险。
+
+当想放弃时，就想想初心还在不在，还能不能打动自己，一般这时候都能重新振作起来。
+
+
+
+**触发条件：**蹲完马步后是触发条件，以前蹲马步后一般都耍手机，现在改为编码练手，这是惯常行为的改变。
+
+
+
+**具体事项：**
+
+这十行代码，我是写什么功能，使用什么编程语言(c/c++/golang/python)，事项越具体越明确，你的想法就越少，执行力就越强。
+
+人执行力变差，往往是因为想的太多，做的太少。
+
+
+
+**买礼物：庆祝每一次小进步，小成功：**
+
+哪怕是一点点的进度，也值得来庆祝。
+
+
+
+**21天：给自己画条终点线，定义怎么才算成功养成习惯。**
+
+如果让你“每天编程20行”或者“每天走一万步”，你听了只有有什么感受？
+
+“有种遥遥无期的感觉，而且只有开始没有结束，更像是一种惩罚，没有终点的比赛”
+
+连续21天都进行编码还是很有挑战的，因为中间有一天没写就得重新开始计数呢。
+
+
+
+**习惯养成后维持就好，开始培养下一个习惯**
+
+只要培养习惯达到了我定义的成功标准，我就会把它放开，让它自己运行，而我的注意力会转移到培养下一个好习惯上。
+
+我们要学会放手，不能因为怕养成的习惯消失了就对它过分关注，失去了培养其他习惯的机会。
+
+
+
+三分钟热度是没有达到成功的目标就放弃了，在达到成功的目标后的放弃，这个叫放手。
+
+
+
+**突发情况的应对措施：**
+
+对于编写代码习惯来说，加班没时间怎么应对？手头没电脑怎么应对？
+
+事实是，在出现让你措手不及、没有任何准备的状态时，很容易放弃。
+
+当我们预想到有阻碍，并且写出应对之法时，就想已经知道了会发生什么。
+
+当这件事真的发生时，你也不会恐慌，也就不会轻易放弃了。
+
+
+
+放置的位置：
+
+将习惯卡片放到比较醒目、随时能看到的地方。
+
+
+
+## 4、3 坚韧的计划比“一定要”的计划更靠谱
+
