每日读书打卡

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -739,3 +739,98 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 ## 4、3 坚韧的计划比“一定要”的计划更靠谱
 
+做习惯培养计划进入的坑是：把习惯名当作计划，但它其实是最终结果。
+
+比如每天背60个单词，拿开车来比喻，这些应该是我们最终想到达的目的地。
+
+
+
+每天背60个单词这种一蹴而就的计划，除了难以实现，还容易使人产生厌倦感。
+
+好多习惯我们半途而废的原因不是意志力不够，也不是难度大，而是厌倦。
+
+所以我的做法是希望培养习惯的计划更有挑战，也更有趣，就像游戏里打怪一样，一级一级的突破。
+
+我把这叫做循序渐进的计划。
+
+比如健身，首先教练会让你做个体能测试，告诉你肌肉变大是什么原理
+
+
+
+接着，根据你体能测试的结果有针对性的制订计划。比如说你能推20千克的杠铃，教练不会让你直接推40千克的，而是让你从18千克开始，再到20千克，22千克，20千克，18千克。每次都从能力所及之处开始，然后中间突破极限，再慢慢回来，下次再提升一点，突破新的极限。
+
+
+
+最后，教练不会让你每天都锻炼，而是一三五这样隔一天锻炼一次。每次锻炼都针对不同的部位，周一是手臂，周三是背部和肩，周五是腿和腰，同时还会提醒你规律作息和调整饮食。
+
+
+
+这就是一个循序渐进的健身计划。
+
+
+
+培养习惯的最后一步是忠实记录，积极反馈。
+
+![image-20250714110302156](https://gitee.com/codergeek/picgo-image/raw/master/image/202507141103619.png)
+
+横轴上的刻度代表一个月的天数，纵轴是刻度，分别是5000步、10000步、15000步，沿着一万步这个刻度画出一条参考线。
+
+上面还写着培养习惯的名字和奖励。
+
+
+
+这三个小人是培养习惯的“三条命”。（越是完美的计划，越容易被打破。）
+
+有人做计划：“每天慢跑5000米”，预想中是这样的：
+
+![image-20250714110941367](./picture/202507141109962.png)
+
+但我们是人不是机器，我们每天的精力、情绪、时间、状态都是不一样的，就像这样：
+
+![image-20250714111130657](https://gitee.com/codergeek/picgo-image/raw/master/image/202507141111040.png)
+
+所以刚开始的18天坚持的不错，突然有一天特殊原因，没有完成每天5千米的目标。
+
+这时候就开始全盘否定自己的计划，觉得不适合自己，不合理；
+
+开始否定自己，觉得自己是个三分钟热度的人。
+
+**如果把视角抬高到一个月的高度，成都18天，失败1天，在我看来，这段培养习惯的过程非常成功啊。**
+
+有时候放自己一马的话，我相信后面自己会坚持的更好的。
+
+
+
+所以我的做法是，允许自己每个月有三次“挂掉并复活”的机会，每挂掉一次，就涂黑一个小人儿。
+
+三个小人都黑了就game over，要重新开始培养这个习惯。
+
+偶尔一次特殊情况没完成，也不会导致游戏结束，你还可以满血复活重新开始游戏。
+
+只有三条命都用掉了，才是真正的游戏结束，game over。
+
+
+
+奖励和奖赏
+
+真正驱使我健身的是，我自己感受搞身体状态比之前好了，以及别人称赞我“有毅力”，“比之前精神了”。
+
+越运动越感觉自己精神状态好，就越愿意运动。
+
+**周围人对我的称赞是我坚持健身这个习惯带来的奖赏，人都希望被认可、被关注的内心需求，如果奖赏了这些需求，个人的驱动力就更强了。**
+
+
+
+内在的驱动力会比外在的诱惑力输出更持久的能量，所以我的做法是只在习惯培养成功的时候奖励自己，在习惯培养的过程中奖赏自己。
+
+
+
+所以在培养习惯的过程中，建议把注意力放在过程带来的积极感受上，这样更容易养成习惯。
+
+找到习惯培育的过程中的乐趣，后续就会越做越顺了。
+
+
+
+# 第五章 如何过一天就如何过一年
+
+## 5、1 忙完工作再去实现年度计划就没戏了
