每日读书打卡

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -834,3 +834,79 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 # 第五章 如何过一天就如何过一年
 
 ## 5、1 忙完工作再去实现年度计划就没戏了
+
+### 1）没完成年度计划的原因
+
+很多人制订好年度计划，但是因为每天很忙，根本没时间推进。
+
+**第一，你不是没时间，而是没精力**
+
+早上上班精力最旺盛，随着时间的推移，精力会慢慢下降，做的事情越多越难，精力下降的越快，等到下班的时候，整个人都累的跟行尸走肉一样，再挤地铁和公交回家，换成我，回家也只想看看电视剧，玩玩游戏。
+
+
+
+**第二，你不是没时间，而是没大块时间**
+
+这是个碎片化的时代，时间被各种app分割成碎片，想找个15分钟完全不被打扰的时间都很难。
+
+
+
+**第三，你不是没时间，而是没有立刻去做**
+
+
+
+### 2）如何改善上述情况
+
+**把每天要做的事情都写到一张清单上就可以**
+
+**把每天要做的事情都写到一张清单上就可以**
+
+**把每天要做的事情都写到一张清单上就可以**
+
+
+
+**第一、没时间完成年度计划**
+
+你可能觉得“忙完工作以后，有时间了再完成个人年度计划的事情”，但工作是忙不完的，所以你总也没时间完成
+
+年底计划的事情。
+
+
+
+**第二、区分重要和不重要的事情**
+
+一般我们会倾向于先完成简单的事情，因为好做容易出成果。
+
+
+
+**第三、总有几件事做不完，拖到明天**
+
+早上信心满满的写了很多待办事项，理想很丰满，现实很骨感，其实根本没那么多时间来做事。
+
+所以总有几件事做不完，拖延到明天。
+
+![image-20250715104128173](https://gitee.com/codergeek/picgo-image/raw/master/image/202507151041712.png)
+
+**左边一栏比较窄，上面有时间的刻度，这个是一天的时间轴，可以让我们掌握一天到底有多少时间资源可用。**
+
+将每天固定时间做的固定事情确定好，比如早上9点到10点开会，这段时间就已经预支出去了，不是我可以自由支配的了。
+
+其实一天留给我们的时间并没有想象的那么多。
+
+
+
+**右边一栏比较宽，我把它叫自由区。**
+这里写的才是真正的待办事项，有新的待办事项，随时可以加进来。
+
+
+
+我建议把工作、生活、年度计划，所有的事情都列到同一张清单上，这张清单就代表着所有你今天要做的事情。
+
+工作、生活、年度计划，他们是平等的。
+
+**在工作之余穿插一些年度计划的事情，这不但会让你的工作更有效率，还不会让你太累。**
+
+比如说可以脑力和体力交替。写代码写累了，可以打打拳，锻炼下身体。
+
+
+
