1、记录每日读书打卡 2、记录减肥的每一天

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -910,3 +910,88 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 
 
+### 3）任务分解
+
+将“TRA项目总结文档”分解成了三个步骤：
+
+收集项目资料、写大纲、完成文档。
+
+首先，做任务分解的目的是让我们能利用好碎片时间。
+
+比如你有15分钟时间，可以写完项目总结文档吗？写不完！
+
+虽然写不完文档，但是收集一下写文档需要的资料还是可以的。
+
+把生活中的碎片时间化零为整，好好的利用。
+
+
+
+### 4）将清单事项更具体的记录
+
+写清单的目的之一就是通过记录的方式，让我们把这事忘记，从而更专注于手头的工作，效率更高。
+
+如果不把要做的事情都写下来，那么这些事就会在你的脑袋里打架。
+
+将要做的事情写下来，就像从脑袋里面将事情剪切到纸上一样，脑袋就清净多了。
+
+而且要记录的尽可能详细，否则我们心里总是担心有什么遗漏的地方。
+
+
+
+### 5）4D工作法
+
+Do it now:立刻去做
+
+Delay it:计划去做
+
+Delegate it:授权去做
+
+Don't do it:尽量别做
+
+四象限工作法更偏向于判断事情的轻重缓急，而4D工作法更偏向于执行。
+
+
+
+如何把4D工作法落实到待办清单上呢？
+
+不管遇到什么样的事，迅速用4D工作法确定它的下一步行动，然后写在待办清单里。
+
+
+
+**第一、立刻去做的事情写在自由区**
+
+做好标记，上班的时候优先去完成。
+
+
+
+**第二、计划去做的事情**
+
+（1）今天做，而且是固定时间去做的事情
+
+这类事情放到手机日历中
+
+（2）今天某个时间段做的事情
+
+放到清单左侧的时间轴上，这段时间内我一定要排除其他干扰做这件事。
+
+（3）今天做，但什么时候做都行的事情
+
+把它写在右边的自由区，并且做任务分配
+
+（4）今天别人交代给我的事情，却是将来要做的
+
+我把它写到月历中
+
+
+
+**第三、授权去做**
+
+我把一件事授权给别人去做的时候，会跟他确认一下什么时候给我回复。
+
+比如对方说三天后给结果，那么我就在日历中三天后设置一个体性，到时候我会跟进这件事情。
+
+
+
+**第四、尽量别做**
+
+尽量别做的事情，我压根不会写到清单中
