每日读书，只管去做

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -995,3 +995,77 @@ Don't do it:尽量别做
 **第四、尽量别做**
 
 尽量别做的事情，我压根不会写到清单中
+
+
+
+**计划挺好，但是每天总会遇到各种突发情况，有什么方法解决吗？**
+
+遇到突发情况不是没有解决办法，而是让心烦的情绪占据了整个大脑。
+
+所以遇到挫折或者突发事情，别把突发事件当成特别可怕的事情，或许它没有你想象中那么严重。
+
+把变化和突发情况也当成计划的一部分。
+
+**先处理心情，再处理事情。**
+
+**先处理心情，再处理事情。**
+
+**先处理心情，再处理事情。**
+
+
+
+## 5、2 如何井井有条的度过一个忙碌的早晨
+
+**第一、对事情的轻重缓急进行排序，是源自你内心的价值观**
+
+**第二、两分钟原则。2分钟能解决的事情，就立即去做。**
+
+用2分钟原则可以快速清理掉很多小事情。
+
+
+
+**第三、分清别人口中的重要、紧急，变被动为主动**
+
+A说有重要、紧急的事情找你，你就放下手上的事情立马帮他解决。
+
+B说他的事情也很重要和紧急，你又放下去做这件事。
+
+所以不要别说一说重要、紧急就跟着对方的思路走，先看看自己的待办事项中有什么更重要的事情没？
+
+如果有更重要的事情，就拒绝或者商量下帮他的时间；
+
+如果没有更重要的事情，就立马帮他人做下。
+
+所以正确的做法是：“**立刻回应，而不是立刻去做**”
+
+![image-20250717171305937](./picture/image-20250717171305937.png)
+
+**总之，平时做事的时候一定要有一种自己主动选择这样做的感觉，而不是因为别人怎么说，自己就怎么做。**
+
+**第四、预览事情，基于事实而非自己的假设来判断事情的轻重缓急**
+
+我会预览下今天要做的事情，然后再确认优先级。
+
+预览的意思就是先看一眼这件事到底是什么事。
+
+
+
+![image-20250718091316319](https://gitee.com/codergeek/picgo-image/raw/master/image/202507180913787.png)
+
+- 两分钟能解决的事情立刻去做
+
+- 把计划内和临时突发的所有事情都写下里
+- 预览到底是什么事情，以此决定优先级
+- 优先做重要的事，把不重要和自己想做的事放到后面做
+
+当突发情况出现时，不是立刻去做，而是和手头上所有的事情做比较，永远去做当前最重要的事情。
+
+
+
+30岁左右的焦虑，往往是因为你没有按照自己想要的方式活着！
+
+**做事靠系统，做人用真心！**
+
+**做事靠系统，做人用真心！**
+
+**做事靠系统，做人用真心！**
