--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -120,9 +120,9 @@
 
 如果想要，你会很兴奋，因为这个过程让你的愿景更清晰。
 
-如果不想要，你则会不愿面对，那就放弃，省下实践和精力去做其他你真正想做的事情。
+如果不想要，你则会不愿面对，那就放弃，省下时间和精力去做其他你真正想做的事情。
 
-大部分人年度计划半途而废不是因为毅力问题、坚持问题、时间问题，而是因为那些不是你自己真正想要的。
+**大部分人年度计划半途而废不是因为毅力问题、坚持问题、时间问题，而是因为那些不是你自己真正想要的。**
 
 
 
@@ -194,7 +194,7 @@
 
 1、我想变的更健康，身体更舒服
 
-2、我想延长我的职业寿命，我喜欢现在工作
+2、我想延长我的职业寿命，我很喜欢现在的工作
 
 3、减肥让我的身材更好，做心里想做的事情时，就没有那么多后顾之忧了。
 
@@ -303,13 +303,13 @@
 
 甘特图的画法：
 
-第一步：准备一张A4纸，在横线上标上12个刻度，表示12个月份
+**第一步：准备一张A4纸，在横线上标上12个刻度，表示12个月份**
 
 在纵轴上将你今年的目标一一写下来
 
 ![image-20250710074705901](https://gitee.com/codergeek/picgo-image/raw/master/image/202507100747604.png)
 
-第二步：填充
+**第二步：填充**
 
 预估每个年度目标的起止时间
 
@@ -390,7 +390,9 @@ NetDefenser项目的开始和结束时间是多少？从6月到年底的12月吧
 
 **项目化解：**
 
-在项目进行的过程中，会遇到很多难题，比如在写开源项目《基于DPDK的网络入侵检测系统》，我会遇到什么困难呢？
+在项目进行的过程中，会遇到很多难题，比如写基于
+
+比如在写开源项目《基于DPDK的网络入侵检测系统》，我会遇到什么困难呢？
 
 有入侵检测的TCP流重组挑战，需要处理乱序、重传、丢包等TCP复杂情况。
 
