海思网卡不支持dpdk的问题排查记录.md

--- a/每日读书/蛤蟆先生去看心理医生.md
+++ b/每日读书/蛤蟆先生去看心理医生.md
@@ -21,3 +21,26 @@
 回想一下你的童年，想想那些过往还有最初的记忆，然后我们再看能不能在咨询中一起悟出什么来。
 
 # 第六章 探索童年
+
+
+
+# 第九章 秘密协议
+
+挑剔型父母状态的描述词：
+
+爱批评人、愤怒、严厉。。。
+
+每个人都有“父母状态”，这来自年幼时父母的言行和对待我们的方式。
+
+
+
+在我看来，困惑是学习过程中的第一阶段，这说明固有知识的局限开始被打破了。你要直面新的信息，这些新的信息会挑战你现有的观念和行为模式。**由此产生的焦虑是让你改变的动力**，很可能也会开启你的创造力。
+
+
+
+判定自己有罪，然后谴责自己，甚至惩罚自己。这种经历会伴随你的一生。
+
+如何摆脱这种情况呢？
+
+只有自己能救自己。
+
