--- a/每日读书/1-只管去做.md
+++ b/每日读书/1-只管去做.md
@@ -887,18 +887,28 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 所以总有几件事做不完，拖延到明天。
 
+
+
+### 3）改善后的每日计划清单
+
 ![image-20250715104128173](https://gitee.com/codergeek/picgo-image/raw/master/image/202507151041712.png)
 
 **左边一栏比较窄，上面有时间的刻度，这个是一天的时间轴，可以让我们掌握一天到底有多少时间资源可用。**
 
 将每天固定时间做的固定事情确定好，比如早上9点到10点开会，这段时间就已经预支出去了，不是我可以自由支配的了。
 
-其实一天留给我们的时间并没有想象的那么多。
+所以脑子里应该有这样一个声音：**其实一天留给我们真正做事情的时间并没有想象的那么多。**
 
 
 
 **右边一栏比较宽，我把它叫自由区。**
 这里写的才是真正的待办事项，有新的待办事项，随时可以加进来。
+
+
+
+**使用不同颜色或星号，标记出事情的优先级**
+
+这点我现在做的不够好，需要加强。
 
 
 
@@ -912,27 +922,33 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 
 
-### 3）任务分解
+### 4）任务分解
 
 将“TRA项目总结文档”分解成了三个步骤：
 
 收集项目资料、写大纲、完成文档。
 
-首先，做任务分解的目的是让我们能利用好碎片时间。
+![image-20250826080001653](./picture/image-20250826080001653.png)
 
-比如你有15分钟时间，可以写完项目总结文档吗？写不完！
+首先，**做任务分解的目的是让我们能利用好碎片时间。**也只有将任务分解成多个小任务，才更方便利用碎片化的时间来完成这些一个个的小任务。
 
-虽然写不完文档，但是收集一下写文档需要的资料还是可以的。
+比如你有15分钟时间，可以写完项目总结文档吗？写不完！虽然写不完文档，但是收集一下写文档需要的资料还是可以的。
+
+然后接下来又有15分钟时间，可以写完项目总结文档吗？写不完！但是撰写下大纲内容还是够用的。
 
 把生活中的碎片时间化零为整，好好的利用。
 
 
 
-### 4）将清单事项更具体的记录
+### 5）将清单事项更具体的记录
 
-写清单的目的之一就是通过记录的方式，让我们把这事忘记，从而更专注于手头的工作，效率更高。
+大部分人写待办清单的时候只把要做的事情写下来，而我会把做这件事大概的思路也简单记录下。
 
-如果不把要做的事情都写下来，那么这些事就会在你的脑袋里打架。
+**写清单的目的之一就是通过记录的方式，让我们把这事忘记，从而更专注于手头的工作，效率更高。**
+
+如果不把要做的事情都写下来，那么这些事就会在你的脑袋里打架，内心是乱的，做事效率会变低。
+
+
 
 将要做的事情写下来，就像从脑袋里面将事情剪切到纸上一样，脑袋就清净多了。
 
@@ -940,29 +956,36 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 
 
-### 5）4D工作法
+### 6）4D工作法
 
-Do it now:立刻去做
+![image-20250826080127352](./picture/image-20250826080127352.png)
 
-Delay it:计划去做
+- Do it now:立刻去做
 
-Delegate it:授权去做
+- Delay it:计划去做
 
-Don't do it:尽量别做
+- Delegate it:授权去做
 
-四象限工作法更偏向于判断事情的轻重缓急，而4D工作法更偏向于执行。
+- Don't do it:尽量别做
+
+
+**四象限工作法更偏向于判断事情的轻重缓急，而4D工作法更偏向于执行。**
+
+四象限工作法更偏向于判断事情的轻重缓急，而4d工作法更偏向于执行。
 
 
 
 如何把4D工作法落实到待办清单上呢？
 
-不管遇到什么样的事，迅速用4D工作法确定它的下一步行动，然后写在待办清单里。
+**不管遇到什么样的事，迅速用4D工作法确定它的下一步行动，然后写在待办清单里。**
 
 
+
+具体做法是这样的：
 
 **第一、立刻去做的事情写在自由区**
 
-做好标记，上班的时候优先去完成。
+只要你在这件事上做好标记就可以，这样的事情在一上班的时候优先去完成。
 
 
 
@@ -972,13 +995,19 @@ Don't do it:尽量别做
 
 这类事情放到手机日历中
 
+
+
 （2）今天某个时间段做的事情
 
 放到清单左侧的时间轴上，这段时间内我一定要排除其他干扰做这件事。
 
+
+
 （3）今天做，但什么时候做都行的事情
 
 把它写在右边的自由区，并且做任务分配
+
+
 
 （4）今天别人交代给我的事情，却是将来要做的
 
@@ -1008,6 +1037,8 @@ Don't do it:尽量别做
 
 把变化和突发情况也当成计划的一部分。
 
+
+
 **先处理心情，再处理事情。**
 
 **先处理心情，再处理事情。**
@@ -1015,6 +1046,10 @@ Don't do it:尽量别做
 **先处理心情，再处理事情。**
 
 
+
+![image-20250826080713352](./picture/image-20250826080713352.png)
+
+杂乱的各种事项经过4D工作法整理出下一步行动，进而就能梳理出“每日待办清单”。
 
 ## 5、2 如何井井有条的度过一个忙碌的早晨
 
