--- a/每日读书/1-只管去做(已完结).md
+++ b/每日读书/1-只管去做(已完结).md
@@ -1061,13 +1061,17 @@ HTTP、DNS、SMTP等协议解析复杂度高。
 
 
 
-**第三、分清别人口中的重要、紧急，变被动为主动**
+**第三、将所有要做的事情写下来，不论事计划内还是临时突发的**
+
+
+
+**第四、分清别人口中的重要、紧急，变被动为主动**
 
 A说有重要、紧急的事情找你，你就放下手上的事情立马帮他解决。
 
 B说他的事情也很重要和紧急，你又放下去做这件事。
 
-所以不要别说一说重要、紧急就跟着对方的思路走，先看看自己的待办事项中有什么更重要的事情没？
+所以不要别人一说重要、紧急就跟着对方的思路走，**先看看自己的待办事项中有什么更重要的事情没**？
 
 如果有更重要的事情，就拒绝或者商量下帮他的时间；
 
@@ -1079,7 +1083,7 @@ B说他的事情也很重要和紧急，你又放下去做这件事。
 
 **总之，平时做事的时候一定要有一种自己主动选择这样做的感觉，而不是因为别人怎么说，自己就怎么做。**
 
-**第四、预览事情，基于事实而非自己的假设来判断事情的轻重缓急**
+**第五、预览事情，基于事实而非自己的假设来判断事情的轻重缓急**
 
 我会预览下今天要做的事情，然后再确认优先级。
 
@@ -1098,6 +1102,18 @@ B说他的事情也很重要和紧急，你又放下去做这件事。
 当突发情况出现时，不是立刻去做，而是和手头上所有的事情做比较，永远去做当前最重要的事情。
 
 
+
+所有的目标只有两类，一类是项目，一类是习惯。对于项目类型的目标，一边抬头看路，制作好甘特图，一边低头走路，用倒推分解法做出项目计划。
+
+![image-20250827080914764](./picture/image-20250827080914764.png)
+
+习惯类型的目标可以写一张习惯培养卡片，然后用开汽车一样的四步法来制作培养习惯的计划。
+
+![image-20250827081029361](./picture/image-20250827081029361.png)
+
+![image-20250827081115552](./picture/image-20250827081115552.png)
+
+不管是项目还是习惯，都要落实到每一天的计划中，使用4D工作法。
 
 30岁左右的焦虑，往往是因为你没有按照自己想要的方式活着！
 
