--- a/每日读书/2-软技能-代码之外的生存指南(在读).md
+++ b/每日读书/2-软技能-代码之外的生存指南(在读).md
@@ -1,6 +1,8 @@
-# 第46章 分解任务会提高生产力
+# 第四篇 生产力
 
-## 如何分解任务？
+## 第46章 分解任务会提高生产力
+
+### 如何分解任务？
 
 把大任务分解为小任务的时候，务必确保每个小任务都有一个明确的目标。
 
@@ -32,9 +34,9 @@ TCP重组逻辑
 
 
 
-# 第47章 努力工作的价值
+## 第47章 努力工作的价值
 
-## 47、1 努力工作是辛苦的
+### 47、1 努力工作是辛苦的
 
 要接受一个事实，努力工作就是辛苦的，不可能像玩游戏一样快乐有趣。
 
@@ -56,13 +58,13 @@ TCP重组逻辑
 
 
 
-## 47、2 聪明的工作无法取代努力的工作
+### 47、2 聪明的工作无法取代努力的工作
 
 聪明的工作（包括更好的工作方法、更好的工具能提升效率）固然重要，但是依旧需要努力工作，持久的投入和坚持“努力工作”这件事，聪明 + 努力两者相结合的工作方式，才能让你获得成功。
 
 
 
-## 47、3 努力的工作总是枯燥的
+### 47、3 努力的工作总是枯燥的
 
 一件事在开始做时，往往热情满满；随着时间的推移，内心的热情慢慢减弱，
 
@@ -80,7 +82,7 @@ TCP重组逻辑
 
 
 
-## 47、4 现实
+### 47、4 现实
 
 现实就是没有一件事是轻而易举的，
 
@@ -96,13 +98,13 @@ TCP重组逻辑
 
 
 
-## 47、5 努力工作：如何做到这一点
+### 47、5 努力工作：如何做到这一点
 
 你必须认识到，要想实现目标，要想发挥自己的全部潜力，唯一的途径就是主动咬紧牙关，硬着头皮，努力工作。
 
 
 
-## 47、6 采取行动
+### 47、6 采取行动
 
 你曾经投身到哪些艰苦的工作中？
 
@@ -116,4 +118,45 @@ TCP重组逻辑
 
 
 
-# 第 48 章 任何行动都比不行动好（08-29读）
+## 第 48 章 任何行动都比不行动好
+
+### 48、1 正反馈 and 负反馈
+
+虽然选择错可能会浪费一些时间，但是很多时候，都需要试错很多次后才能找出正确的行动方向。
+
+走错了路，我能收获失败的教训（负反馈），下次不犯类似的错误；
+
+走对了路，我能收获成功的经验（正反馈），将经验复用到其他事情上；
+
+而原地不动是最糟糕的，因为选择什么都不做，对我而言没有任何反馈，我就不知道如何调整轨道。
+
+
+
+### 48、2 跑起来的汽车更容易转向
+
+在一辆停着的汽车上转动方向盘是很不容易的，当车子开起来时转动方向盘就容易多了。
+
+遇到问题后更好的做法是上车、发动它，这样至少你在某个方向上是前进着。
+
+一旦汽车处于运动状态下，即使走错路也能轻松掉调整到正确的道路上。如果一直待在车库，可能不会转错方向，但是你也没机会转到正确的方向。
+
+
+
+当你完全不确定要做什么的时候，最好的行动就是做一些事情，然后在前进途中再调整方向。这是前进的唯一办法。
+
+只有开始做一些事情的时候，你才能预见到自己将来要采用的一切行动，评估哪些可能是错误的。
+
+
+
+# 第五篇 理财
+
+
+
+
+
+
+
+
+
+
+
