每日读书打卡

--- a/每日读书/2-软技能-代码之外的生存指南(在读).md
+++ b/每日读书/2-软技能-代码之外的生存指南(在读).md
@@ -1,5 +1,21 @@
 # 第四篇 生产力
 
+## 第36章 一切始于专注
+
+### 什么是专注？
+
+你试图修复一些bug，或者在实现某个有趣的功能。
+
+时间飞逝，你忘了吃饭、喝水乃至睡觉，一门心思扑在你的任务上。
+
+你感受不到外界对你的干扰（电视剧、电话、邮件的干扰）。
+
+
+
+### 如何更专注
+
+
+
 ## 第46章 分解任务会提高生产力
 
 ### 如何分解任务？
