每日读书/2-软技能-代码之外的生存指南(在读).md 已完成

--- a/每日读书/2-软技能-代码之外的生存指南(在读).md
+++ b/每日读书/2-软技能-代码之外的生存指南(在读).md
@@ -14,6 +14,40 @@
 
 ### 如何更专注
 
+番茄工作法
+
+排除干扰
+
+​	在开始任务前，排除内部干扰和外部干扰。将手机静音，关闭分散注意力的浏览器窗口，关闭微信、飞书等即时通信工具，让自己的内心沉静下来。
+
+思考
+
+​	回想下自己专注时的感受是什么？是一种什么样的神奇体验
+
+​	是什么令自己进入专注模式的？
+
+​	又是什么打破专注状态的？
+
+实践下专注，使用番茄工作法，在指定的时间段内专心致志的只做一项任务，当你沉浸在专注状态时，记住这种感觉。
+
+
+
+## 第37章 生产力提升计划
+
+### 概览
+
+先将把复杂的大任务拆分成简单的小人物，把每天的时间拆分成一个个可用的时间段，根据任务的优先级给每个时间段分配恰当的任务。
+
+然后使用番茄工作法去实实在在的完成任务。
+
+
+
+### 季度计划
+
+
+
+### 月计划
+
 
 
 ## 第46章 分解任务会提高生产力
