更新suricata的流管理

--- a/每日读书/2-软技能-代码之外的生存指南(在读).md
+++ b/每日读书/2-软技能-代码之外的生存指南(在读).md
@@ -44,9 +44,25 @@
 
 ### 季度计划
 
+一个季度3个月，一年分为4个季度。
+
+列出在一个季度中我想完成的一个项目，将大项目拆分为一个个小目标。然后思考每一周每一天分别完成哪些工作。
+
+然后再将其更新到每周计划中，然后每天专注于做一个个任务即可。
+
+这么做，是让我清楚的了解自己的主要目标是什么，也知道该如何实现它。
+
+同时，他还会让我保持专注。
+
 
 
 ### 月计划
+
+每个月的第一天我会打印出当月的月历，并且规划出每天要完成的工作。
+
+可以根据上个月的完成情况,粗略估算出这个月我能完成多少工作。
+
+我会从季度计划中挑选任务，看看哪些任务适合写入月历中。
 
 
 
