--- a/每日读书/2-减法(在读).md
+++ b/每日读书/2-减法(在读).md
@@ -151,7 +151,7 @@
 
 
 
-**步骤一：划分时段**
+### **步骤一：划分时段**
 
 日程安排规律化，会带来两个好处。
 
@@ -161,7 +161,7 @@
 
 ![image-20250904093017883](./picture/image-20250904093017883.png)
 
-**步骤二：归类时段**
+### **步骤二：归类时段**
 
 将步骤一中划分的时段进行归类，要事阶段、计划内其他事项阶段、留白时段、弹性时段。
 
@@ -207,5 +207,46 @@
 
 
 
-步骤三：列出所有事项
+### 步骤三：列出所有事项
 
+在列出一周事项时，将能想到的事项都列上。
+
+
+
+**动作3.1 罗列事项**
+
+![image-20250905085554505](./picture/image-20250905085554505.png)
+
+**动作3.2 分解事项**
+
+将大的事项（如年度计划，重要项目），分解出以后走内要完成的具体事项。
+
+这个分解，可以让你专注于当下，聚焦在具体的执行过程，减轻焦虑感。同时，保证你不会偏离方向。
+
+
+
+### 步骤四：列出所有事项
+
+具体做法是先对要事进行归类，然后再对其他事项进行归类。
+
+**动作4.1 归类要事**
+
+要事来自于年度计划、重要项目的分解，或者与你人生目标相关的重要事项。
+
+大家每天忙于工作，很容易忽视和我人生目标相关的重要事项，比如如下：
+
+- 每日编码锻炼个人编程能力
+- 锻炼身体，强健体魄，让身体更好用
+- 每日读书
+- 录制视频教程，每周一更
+
+
+
+**动作4.1 归类计划外的紧急事项和计划内的其他事项**
+
+计划外的紧急事项，不需要提前计划。
+
+将剩下的事项归类到“计划内的其他事项”。包括两个分类：
+
+- 日历事项（执行时间固定）
+- 待办事项（执行时间不固定或尚未确定）
