--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -1,3 +1,5 @@
+## 能量感定义
+
 能量感：有干劲、充满力量，特别积极的状态。
 
 具体体现为：
@@ -22,4 +24,56 @@
 
 
 
-下节内容：闭合任务回路  
+## 闭合任务回路  
+
+就是创造一种“完结感”，一种“做完了”，“搞定了”的满足感。
+
+就像电路一样，你开始做一件事（打开开关），然后把它踏踏实实的做完（电路闭合），这个过程就形成了一个完整的闭环。
+
+不是为了得到表扬（寻求认可），不是为了证明自己厉害（追求成就感），就是单纯的“**这件事情有始有终了**”的踏实感觉。
+
+
+从学校到社会的转换，为什么很多人有无力感和缺乏正反馈的挫败感？
+
+学校的学生都有统一的完结点：期中考试、期末考试、中考、高考、大学毕业等，我们可以把这些完结点内化为自己的完结点，踏踏实实的跟着老师的安排走，只要努力学习，就能看到一个阶段的结果。
+
+离开学校到了社会以后，这种边界清晰的“完结点”会越来越少，需要自己去安排一切。
+
+- 规划生活
+- 职业发展
+- 家庭生活
+- 身体健康
+- 个人成长
+
+所以一出社会，很多学生就蒙了，失去了方向。所以在个人成长领域，建立个人项目的“闭合任务回路”非常重要。
+
+![image-20250922173240195](./picture/image-20250922173240195.png)
+
+实现闭合任务回路，需要的是：
+
+1、清晰的完结点；
+
+2、仪式感触发；
+
+3、个人心理上对完结点和仪式感出发的认可
+
+
+
+**清晰的完结点：**一条清晰、阶段性的终点线，将大目标拆解为多个小目标，然后设置每个小目标完成的标准。
+
+**模糊的目标：**
+
+”我要减肥“-》“减到什么程度？”，什么时候算成功？
+
+
+
+**清晰的完结点：**
+
+"这个月减重2公斤" → 称重显示减了2公斤就达标
+
+
+
+仪式感：用一个具体的动作或行为来告诉自己“这件事做完了”，事情告一段落了。
+
+改变自己记录读书笔记的习惯，不是抄写，而是记录自己的想法。
+
