--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -77,3 +77,54 @@
 
 改变自己记录读书笔记的习惯，不是抄写，而是记录自己的想法。
 
+
+
+# 第二章：立即行动 从内耗到产出
+
+## 2、1 正确认识“碎碎念”
+
+大脑在相对空闲时，会出现碎碎念的声音，比如焦虑、担忧、自责等负面情绪。
+
+首先要意识到“你不等于碎碎念”
+
+这些碎碎念的想法，是基于过去的陈芝麻烂谷子的事，而你在成长在进步。
+
+这些想法是未经验证或证实的想法，不代表就是对的。
+
+比如说，我的编程能力不够强，是基于刚毕业时连个俄罗斯方块程序都写不出来，在第一年工作中，还被领导指着鼻子骂了几次，给我骂的离职了，但是这几年通过我日积月累的编码训练，实战能力得到了很多的提升，但是我还依旧活在往事的阴影中。
+
+
+
+ebpf技术难学吗？就必须要会内核编程才能学会ebpf编程吗？
+
+我不会内核编程，而ebpf的学习需要linux内核编程知识，所以我学不会ebpf是正常的，慢慢我就接受了这个扭曲的思想。
+
+反驳的事实：kyanos的开源作者原本是java语言，我看他用go + c写的kyanos开源也挺好的。
+
+
+
+rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑潜意识里就觉得rust入门好难啊，并形成了这个扭曲思想。
+
+**反驳的事实：**认识的网友大哥陈诚，本职工作和计算机无关，利用cursor工具+rust开发了一个开源项目。
+
+
+
+记录下碎碎念，然后问自己：
+
+1、这个想法是真的吗？有事实依据吗？（假的，没有事实依据，是基于过去的老旧经验得出的错误想法）
+
+2、有什么客观证据能反驳我的这个想法？（去年独立的完成了soc的agent的开发，在b站上录制新手实战视频，）
+
+
+
+我们的过往经历（不管是成功的还是失败的经历）
+
+**认知重构三步曲**
+
+- 识别扭曲思想
+- 挑战扭曲思想
+- 用合理的思想替代扭曲思想
+
+
+
+**使用“科学思维”可以实现认知重构。**
