--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -128,3 +128,23 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 **使用“科学思维”可以实现认知重构。**
+
+焦虑是什么？
+
+​	当我们尝试突破舒适区、做自己陌生的事，缺乏经验来指导行动；或者做别人也没做过的事时，缺乏参照物，心里慌的一逼。
+
+焦虑是人的本能，提醒你注意风险，避免失败或受伤。
+
+
+
+​	迟迟不行动，没有真实的行动反馈进行校验和修正错误的想法，一旦迈出第一步，反而没时间去胡思乱想那么多。
+
+
+
+焦虑的价值在提醒我们：
+
+- 焦虑不是敌人，是大脑在面对未知风险时的自我保护机制。
+- 缓解焦虑的真正方法不是逃避，而是小步行动，用行动去证实心中的恐惧是多余的，让内心更加强大。
+- 用行动一次次证明恐惧和焦虑的点是错误的，你的自我效能感就会慢慢得到提升。大脑潜意识里觉得你做不到，但是你的行动做到了，大脑之前的想法就能得到纠正。
+
+唯有识别他们、直面他们、保持行动，才能解决问题。
