--- a/编程思考/2025年重新审视自己的能力.md
+++ b/编程思考/2025年重新审视自己的能力.md
@@ -60,3 +60,25 @@ deepwiki技术，可以帮我梳理中大型开源项目的流程和逻辑，减
 # 四、以前不敢涉足的知识，现在可以学了
 
 比如github action是什么东西，保留e2e测试是什么？比如很多测试的知识，学习内核的知识，只要你想学什么知识，很短时间内ai就会给你答案的。
+
+
+
+# 五、认知重构
+
+看到很多大佬都写了自己的开源项目，比如ecapture，kyanos等，心里很羡慕他们的同时也感叹于自己能力的弱小。细想下，每个人都是从弱小慢慢熬过来的：
+
+开始时，以模仿别人的代码为主，找找感觉；
+
+慢慢的，开始做一些ebpf的实用小程序，来积累做项目的相关知识；
+
+进而，小项目做的多了，写大点的项目自然就轻车熟路了，
+
+明白这个道理后，我心态就平和多了，自卑感和无力感都消失了，更激励自己更踏实的前行。
+
+往往我们看到的都是别人的光环，没看到别人辛苦的付出，流的汗、流的泪，加的班。。。
+
+
+
+将自己要实现的大目标拆解为多个小目标，然后每个小目标自己去实现它，每次动力不足怎么办？
+
+想象自己在公司真的负责做这个微隔离MicroSegemnt项目
