1、更新每日饮食记录 2、cursor 阅读开源项目并重构为不同语言.md

--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -148,3 +148,49 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 - 用行动一次次证明恐惧和焦虑的点是错误的，你的自我效能感就会慢慢得到提升。大脑潜意识里觉得你做不到，但是你的行动做到了，大脑之前的想法就能得到纠正。
 
 唯有识别他们、直面他们、保持行动，才能解决问题。
+
+
+
+# 第三章：走出低迷状态的最佳起点
+
+人在低迷状态下，如果靠意志力来强求自己努力，批评自己不自律，反而会导致能量感越来越低，感到疲惫。
+
+
+
+正确的做法：在处于低迷状态时，寻找能增加“能量感”的途径。
+
+下面将介绍“**获得小胜**”和“**闭合任务回路**”的方法。
+
+通过闭合任务回路拿回消耗的能量感，获得完结感和胜利感，最关键的是要亲自践行，别人再怎么言传身教，也代替不了自身的践行。
+
+
+
+”低迷状态“是因为遗留了太多未填满的、不断消耗自己能量的坑。
+
+- 同时启动了2-3个开源项目的编写，每个项目只开头写了一点，没有一个项目是完结的；
+- 看似阅读过很多本书，其实没有一本书是完完整整读完的，每本书看了一点又翻开了下一本书；
+
+**小道理：所有尚未闭合的任务都在消耗我们的能量。**
+
+**从这个角度看，我们得到两点非常重要的启示：**
+
+1、慎重的开启每一个新的项目，开启却没有完结，就会消耗你的能量
+
+2、开启一个新项目就应该尽快把它做完，从而回收任务闭合后的能量感。
+
+
+
+**从执行层面，我们应该：**
+
+1、定期枚举出尚未完成的项目，清理无法做下去的项目
+
+2、总结项目没有完结的原因，以后吸取教训
+
+3、先把精力放在容易完成的项目上，不断闭合小回路提升自我效能感
+
+
+
+**要点：**
+
+要有勇气定期清理难以闭合的项目，并慎重的开始每一个项目。
+
