1、每日读书打卡 2、每日记录体重和饮食

--- a/基础组件/时间轮-网络流量分析场景.md
+++ b/基础组件/时间轮-网络流量分析场景.md
@@ -1,3 +1,23 @@
+在实现代码的时候，采用思维导图梳理清楚实现逻辑。
+
+
+
+参考链接：
+
+尤其是这篇文章，一定要好好看下。
+
+**从零到一实现有趣的时间轮算法，你会了吗!**
+
+https://zhuanlan.zhihu.com/p/665545437
+
+
+
+**基于 golang 从零到一实现时间轮算法**
+
+https://zhuanlan.zhihu.com/p/658079556
+
+
+
 一、时间轮机制
 
 
