--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -153,6 +153,8 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 # 第三章：走出低迷状态的最佳起点
 
+## 3、1 状态不好？因为没有闭合任务回路
+
 人在低迷状态下，如果靠意志力来强求自己努力，批评自己不自律，反而会导致能量感越来越低，感到疲惫。
 
 
@@ -193,4 +195,85 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 **要点：**
 
 要有勇气定期清理难以闭合的项目，并慎重的开始每一个项目。
+
+
+
+## 3、2 闭合任务回路和自我效能感的提升
+
+只有亲身实践、亲自闭合任务回路、用行动A取得效果B，才能从根本上改变一个人的自我效能——因为“你做过，你得到，你知道自己行”。
+
+2024-2025年期间，我开始了减肥，吃减脂餐，大量的训练，成功从200斤的胖子减肥到140斤，有过这次成功的经验，我知道自己在减肥锻炼这块是行的，自我效能感满满，自我效能感是一次次小的任务闭合来提升的。
+
+
+
+2024年，通过大量的编程实践，自我效能感，有了很大的提升。
+
+1、soc agent（核心开发，go）  
+
+2、mmj综合防护系统（核心开发，c） 
+
+3、策略跳变系统（主力开发，windows和linux都是我）
+
+
+
+2025年，哪些事情增加了我在编程领域的自我效能感
+
+1、5月份的ebpf大会，进行了《ebpf技术在rootkit攻防实践中的应用》的主题演讲
+
+2、8月份，参加了cursor大会，分享了《cursor在网络安全中的应用》的议题，认识了很多志同道合的小伙伴
+
+3、《DPDK入门教程》更新到第8课（持续更新）https://github.com/haolipeng/dpdk-hands-on
+
+4、《eBPF硬核入门》课程更新到第10课（持续更新）https://github.com/haolipeng/libbpf-ebpf-beginer
+
+5、小白动手实践系列
+
+- 状态机-编码实践（C/C++/Go版本） https://github.com/haolipeng/learn-by-building
+- 时间轮-编码实践（C++版本）https://github.com/haolipeng/learn-by-building 把任务拆解的足够细，慢慢去吸收，这事急不得。
+
+
+
+**源码阅读系列：**
+
+1、Suricata源代码分析
+
+2、tracee源代码分析
+
+3、dpvs的源代码分析
+
+
+
+哪些项目的任务容易闭合呢？
+
+1、加密流量分析系统（增加单元测试），公司驱动做事，顺带着把核心技术应用到框架中
+
+2、基于dpdk的融合suricata和zeek的系统，NetDefender项目
+
+2、基于ebpf的恶意软件分析系统（为明年的ebpf大会准备的）
+
+
+
+在编程领域，我的自我效能感没那么高，因为缺少大量成功的任务闭合，2024年只是小试牛刀，培养出了一部分自我效能感，我还需要继续。
+
+所以要敢于停掉无法闭合的任务，集中精力做能提升自我效能感的任务上。
+
+
+
+**要点：**
+
+自我效能来源于“我做过，我得到，我知道自己能行”
+
+
+
+## 3、3 怎样才能有效地闭合任务回路？
+
+三个关键：
+
+1、清晰的完结点
+
+2、仪式感触发
+
+3、个人心理上对完结点和仪式感触发的认可
+
+
 
