--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -277,3 +277,67 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 
+高效的制定任务边界，并能成功地闭合自己的任务回路，就是一个人持续成事的关键。
+
+尝试多问自己几个问题：
+
+**1、任务的完结点是什么？清晰吗？可衡量吗？**
+
+实现时间轮的添加定时任务的函数方法，并实现这个方法，然后测试实现的函数功能
+
+
+
+**2、任务是否可以拆分为多个具体、可测量、边界清晰的小任务，完成每个小任务来回收能量感**
+
+编写基础组建时间轮时，可以分为以下小任务：
+
+- 定义核心数据结构
+- 定义对外接口和内部方法
+- 依次实现上述接口和方法
+
+
+
+**3、你为完成任务设置奖励**
+
+当任务完结点触发时，奖励自己“努力的过程”，而不只是“结果”。
+
+比如连续锻炼一周，奖励自己吃一顿欺骗餐。
+
+
+
+除了使用仪式感和庆祝来触发任务的完结感，还可以记录自己“付出努力的过程”，
+
+并使用量化、可视化的方式将个人的努力、付出的过程外化出来。比如：
+
+- 使用飞书文档，记录每天成功完成的一个个工作任务、学习任务、开始时间和截至时间（目前就如此）
+- 和娃娃每日运动锻炼时，记录下每天蹲马步、打拳、做仰卧起坐的情况（目前就如此）
+- 对于看过的书的每一个章节，记录其精华内容和自己的思考（目前就如此）
+- 使用TODO清单app记录当天待办事项，每完成一件事后将其划掉，每周回顾自己本周所完成的工作。
+- 每完成一件大任务之后会专门写一篇总结日志，列出这一次任务从开始到完结的收获。
+
+
+
+要记住：越会为自己的每一次成功庆祝的人，越能收回更多的能量感，来奔赴下一程的冒险。
+
+
+
+如果你长期习惯了自我苛责，可以采用下面的几个简单的方法来标记自己的点点滴滴：
+
+- 每天睡前回想三件今天做的很好的事情
+  - 你真心觉得自己干的不错
+  - 坚持了锻炼
+  - 对老婆好
+- 每天睡前回想三件今天比较艰难，但依然坚持做下去的事情
+  - 做了技术视频
+  - 完成了技术文档的整理
+
+- 每天睡前回想下三天自己给别人带来的积极影响
+  - 帮同事解决技术问题
+  - 陪伴家人度过节日等
+
+要记住：重要的不仅是持续付出努力，更是不断的闭合任务回路，并清晰的感受到闭合了这些任务回路。
+
+感受到任务的完结、努力的回报，这样才可能持续的行动，更好的出发下一个征程。
+
+
+
