1、每日读书/2-反倦怠能量站.md2 2、每日健身和饮食打卡

--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -323,15 +323,15 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 如果你长期习惯了自我苛责，可以采用下面的几个简单的方法来标记自己的点点滴滴：
 
-- 每天睡前回想三件今天做的很好的事情
+- **每天睡前回想三件今天做的很好的事情**
   - 你真心觉得自己干的不错
   - 坚持了锻炼
   - 对老婆好
-- 每天睡前回想三件今天比较艰难，但依然坚持做下去的事情
+- **每天睡前回想三件今天比较艰难，但依然坚持做下去的事情**
   - 做了技术视频
   - 完成了技术文档的整理
 
-- 每天睡前回想下三天自己给别人带来的积极影响
+- **每天睡前回想下三天自己给别人带来的积极影响**
   - 帮同事解决技术问题
   - 陪伴家人度过节日等
 
@@ -340,4 +340,67 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 感受到任务的完结、努力的回报，这样才可能持续的行动，更好的出发下一个征程。
 
 
+
+## 3、4 “小胜”，行之有效的能量回收途径
+
+当你状态不好时，不要一上来就给自己定太大的目标。相反，可以先从一些小的、容易完成的任务开始做，来回收能量感。
+
+
+
+**小：**不大且对自己有意义的小事，每完成一件，你就有一种“我做成了”的感觉，随着不断的**做成**一件件小事，你的自我效能感会越来越强。
+
+
+
+**小胜：**一点小进步、一点小成功。每个人的小胜可能不同，对我来说，独立写出ebpf的kprobe、uprobe代码是小胜。
+
+
+
+**”小胜思维“的精髓：**
+
+不要盯着一个庞大、模糊、周期长的大目标，而是要把目标拆分成能快速完成、可立即验证的小目标。
+
+将精力聚焦在小目标的任务上，在任务上不断的迭代，你的大目标在自然而然的推进了。
+
+
+
+**建立“小胜循环”**
+
+1、将大任务拆解为小任务，任务要保证具体、可执行、可衡量是否完成
+
+2、立即执行
+
+将目标控制在1-2个小时就可以完成。
+
+3、立即验证
+
+小任务完成后可显示结果，跑单元测试，验证自己在朝着最终目标进发。
+
+4、记录成功完成的事，并进行周期性复盘
+
+
+
+**效果：从小胜道大成**
+
+等你连续积累了几十次“小胜”后，你会发现：
+
+- 专注度更高：因为每次任务都快速闭合
+- 自信心更强：每次小胜，都在强化自我效能
+- 擅长拆解复杂问题：习惯将复杂问题拆解成自己能力范围内可解决的多个简单问题，逐一去解决
+- 学习节奏更持久：不再被“大目标”吓到
+
+
+
+**要点1：**
+
+从今天开始，放弃“全有或全无”的心态，学会利用小胜、标记小胜、庆祝小胜，人便可以在一点点进步的喜悦中提升能量感，从而摆脱坏状态。
+
+
+
+**要点2：**
+
+快速取得一个又一个小胜，而不是漫长地等待一次巨大的胜利。
+
+
+
+# 第四章： 告别手机上瘾
 
