每日更新文档

--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -404,3 +404,28 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 # 第四章： 告别手机上瘾
 
+# 第五章：打造适合自己的能量感路径
+
+发
+
+低能量感→想做事→完不成目标→自我苛责→更低能量感
+
+给自己过高的期待、过多的目标，只会制造更多的压力和挫败感，让人陷入“低迷”状态。
+
+
+
+**高能量的良性循环：**
+
+高能量感→付出行动→完成目标→提升能量感→高能量感进一步行动
+
+
+
+如何拥有持续的能量感呢？
+
+**充分的了解自己能量感起伏的规律，知道如何在A点（此刻的你）和B点（达成目标的你）之间选择有效路径，以最佳方式激活能量感。**
+
+有效路径就是让你觉得做起来兴奋、有热情、不觉得累的路径。
+
+
+
+你先要发现自己是什么样的人、能量来源是什么，然后才可能找到合理的路径。
