--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -429,3 +429,87 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 你先要发现自己是什么样的人、能量来源是什么，然后才可能找到合理的路径。
+
+
+
+## 5、2 内源性动机 vs 外源性动机
+
+哪些方法能让我们产生内源性动机呢？
+
+**1、关注真实的个人爱好、兴趣、热情**
+
+即：更了解自己的天性，更了解自己的价值观，从而知道喜欢做什么事情，不喜欢做什么事情。
+
+知己知彼，百战不殆。
+
+
+
+**2、关注自己对外界的影响力**
+
+当我们做的事对他人有积极的影响，能够帮助到他人，是获取自我能量感的很不错的方式。
+
+比如我做的技术视频能够帮助到希望提升自己编码水平的新手程序员。
+
+我把学习心得也分享出来，也是希望能帮助到他人。
+
+
+
+**3、关注专精感和成就感**
+
+去尝试做一件你真正在乎的事,并且把它做成,你就会获得能量感.
+
+给你成就感的事情不需要有多大，但一定是你“真正在乎的”。
+
+
+
+减肥，我真正在乎的事，关乎我的身体健康，经过辛苦的努力，我做到了减肥。
+
+
+
+在软件领域,我真正在乎的事是什么?
+
+参加ebpf大会，参加cursor大会的确让我获得了能量感。
+
+
+
+练习题：**观察身边的”高能量者“长期热爱工作、热爱学习、不断创业、不断探索的人，去了解他们努力行动的背后，是有哪些强大的内源性动机在支持。**
+
+
+
+## 5、3 利用“自主感”提升能量感
+
+《驱动力》一书中总结了三个内源性动机产生的条件：
+
+- **自主感**
+- **专精感**
+- **目标感**
+
+当人们可以自主选择、自主决定如何行动以及自主决定追求什么样的目标时，他们的内在动力不断增强。
+
+**事实证明，自主选择不是那么重要，重要的是一种自主选择的感觉。**
+
+幸运的是，自主选择的感觉可以十分轻松的营造。
+
+
+
+事实表明，那些在工作中获得更高自主感、更多掌控感的员工，会更热爱自己的工作、产出更高的绩效，也更少选择离职。
+
+
+
+那我们该如何做呢？
+
+在有选择的情况下，多做那些给你较高自主性的工作或活动；
+
+在没有选择的情况下，利用一切条件在现有的工作中创造自主性。
+
+
+
+- 任务达到的结果不可变，但是任务达成的路径和方法可以自主选择更好、更恰当的方式；
+- 内化他人安排的任务，思考该任务会锻炼自己的哪些技能，能帮助我们更好的实现哪些个人目标和愿景
+- 在每一份工作中，都将心态设为“为自己工作”，把更多注意力转移到如何利用现有资源提升个人能力上
+
+真相：最枯燥的工作，也有一定空间可调整，努力寻求在工作中的自主感，从而让工作变的更有趣、更自主，推动自己的能量感向前走，保护其不被破坏。
+
+
+
+## 5、4 如何通过专精感提升能量感
