1、每日读书打卡 2、记录体重

--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -513,3 +513,29 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 ## 5、4 如何通过专精感提升能量感
+
+进入心流状态，需要以下因素的加持
+
+**1、明确、具体、可量化的目标**
+
+**2、及时的反馈，哪里做的好？哪里做的不好？**
+
+**3、高度的自主性**
+
+**4、有序的工作环境和日程安排**
+
+可以采用“刻意练习”的方式来培养专精感和心流状态。
+
+刻意练习有四个重要特征：
+
+**1、要有明确而具体的目标**
+
+**2、高于舒适区，低于困难区，有挑战性但是努力下就能够到**
+
+**3、在练习期间，保持足够的注意力、集中精力，心无旁骛。**
+
+**4、寻找具体的、及时的、来自高手的外部反馈**
+
+要点：
+
+人通过刻意练习来提升专精感，其关键是设定具体而明确的目标、在舒适区外进行拓展、在专注状态下进行并获得来自外部的反馈。
