1、每日读书/2-反倦怠能量站.md 2、每日记录饮食和体重

--- a/个人开源项目/我最想做的一个开源项目.md
+++ b/个人开源项目/我最想做的一个开源项目.md
@@ -2,6 +2,10 @@
 
 
 
+或者说我最好奇的是什么呢？我最想做的一个开源是什么呢？
+
+
+
 个人开源项目（仅一个）：
 
 公司项目：基于dpdk的回溯分析框架
@@ -34,7 +38,7 @@
 
 人不能闲着，闲着就容易出问题。
 
-golang实现应用层，
+golang实现应用层。
 
 
 
