--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -539,3 +539,46 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 要点：
 
 人通过刻意练习来提升专精感，其关键是设定具体而明确的目标、在舒适区外进行拓展、在专注状态下进行并获得来自外部的反馈。
+
+
+
+## 5、5 如何通过“目标感”提升能量感
+
+在做任何事时，想得到足够的内驱力，需要把这件事和自己的价值观以及人生愿景联系起来。
+
+试着问自己如下几个问题：
+
+**1、我为什么学英语？**
+
+因为我想更好的辅导娃娃。
+
+同时，英语好，能看懂英文技术文档，听懂英文技术视频，对我的技术成长也是个很大的帮助。
+
+
+
+**2、我为什么养成读书的习惯？**
+
+因为我想成为一个有点内涵和思想的人，在我娃娃的成长过程中，能够为她指点迷津。
+
+
+
+**2、我为什么要精进编程技能？**
+ 在大学刚毕业时，入职一家公司因为写不出来代码被公司辞退了，一直是我心里的伤痛，虽然后面技术越来越强，但是我一直铭记这件事。
+ 为了实现我的编程梦想，我想用编程代码的方式来实现任何我想实现的产品功能。
+
+
+
+我好好想了下，我想学习英语，想读书，想精进编程技能，是我内心极度渴望做的事情，不是外界有人逼迫我的。
+
+
+
+我们应该经常问以下几个问题：
+
+- 在生活或工作中感到压力时，问问自己：“我的人生目标是什么，现在所做的事情会有助于我实现人生目标吗？”
+- 你想给周围人带来什么积极影响？**我想让家人过上更好的生活，我想扩大我的技术影响力，让我能一辈子做喜欢的技术工作。**
+-  在生活或工作中，有哪些人生使命在激励你？（比如，让生活变得有趣，让工作不再枯燥，给更多人带去知识，让更多人健康生活？……），**我想给更多人带去知识**
+- 你想为这个世界贡献什么？**我出了一些技术实战视频，想帮助更多的编程新手提升实战编码技能**
+
+
+
+将工作背后的更大意义挖掘出来，将其与自己真正在乎的目标连接起来，你会发现做事的过程更顺畅、更投入、你的能量感也会自然生长。
