1、每日读书/2-反倦怠能量站.md 2、记录健康饮食和体重

--- a/每日读书/2-反倦怠能量站.md
+++ b/每日读书/2-反倦怠能量站.md
@@ -582,3 +582,30 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 将工作背后的更大意义挖掘出来，将其与自己真正在乎的目标连接起来，你会发现做事的过程更顺畅、更投入、你的能量感也会自然生长。
+
+
+
+# 六、告别拖延症，让自己立马行动
+
+人容易过度自我苛责、自我审查的习惯，我们需要学会科学的方法，来避开无谓的过度思考和能量外泄。
+
+这一章我们将介绍几种具体的实操方法：
+
+## 6、1 滚雪球任务法
+
+​	**“滚雪球任务法”**，是说把你现在所有需要做的**任务全部列下来**，然后从**能量消耗最低**、**能最快收回能量感的任务**开始做起，一点点做到能量消耗较高、较为复杂的任务。**不要一上来就做最复杂、耗能最高的任务**，而要通过完成小任务让能量感滚动起来。
+
+​	剖析：一切未完成的任务、心里惦记的事情，都会占用脑容量（内存），消耗我们做事的能量，大脑会一直提醒我们这些事情还没做完，从而没有足够的能量去做其他事情。
+
+​	要想让滚雪球任务法有效果，要注意以下几点：
+
+- 一定要将闹钟的任务全部写到纸上或者电子文档中，这样才能减轻大脑的负担。
+- 在列任务时，所有让大脑感到有负担的任务都列到纸上，充分解放大脑，它才能专注干事
+- 每做完一个任务，就在列表上划掉该任务。这样能让大脑感觉到“完成了”，从而收回能量感。
+- 当任务列表中的剩下的任务你都不想做了，你就要开始分解任务。说明这些任务的难度超出你的能力，所以你有畏惧心理，将任务拆分的更细致，让其难度在你的能力范围内，就不再畏惧了。
+
+
+
+**要点：**
+
+把脑中的任务列表外化，落到纸上，然后在逐项完成的过程中不断收回能量感。
