1、每日读书/2-反倦怠能量站(在读).md 2、每日体重记录

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -609,3 +609,56 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 **要点：**
 
 把脑中的任务列表外化，落到纸上，然后在逐项完成的过程中不断收回能量感。
+
+
+
+## 6、2 降低做事的启动能量
+
+做一件事的启动能量越高，你就越不想、也不容易开启此事。那么如何降低做“一件事”的启动能量呢？
+
+**1、降低做事的准备工作**
+
+​	比如每日编码10行的习惯看似很简单，但是编码需要电脑在身边，需要打开电脑进入系统，需要打开编程语言对应的IDE，然后才能敲击键盘进行每日编码的，好的做法是保持电脑和编程IDE时刻处于开启状态，想编码的时候就能编码。
+
+
+
+​	那些我想做却一直未做的事情，是不是我给它设置的启动能量更高了，比如幽兰笔记本的使用，的确是如此的，还有一点就是给的优先级不够，总在心里想忙完其他事再学幽兰的使用，结果就给耽误了。
+
+​	**多想想买幽兰笔记本的初衷，初衷，初衷！**
+
+
+
+**2、定个适合自己的小目标，减轻畏惧心里，保证其先run跑起来**
+
+跑步这件事，如制订跑一个小时的目标，光是心里想想就不想开始跑，转而制订跑10分钟的目标更好，不会给自己太大负担，先让自己迈出腿去，一旦跑起来，你会发现跑10分钟还没过瘾。
+
+
+
+也可以利用这个原理改变不想要的行为：
+
+**1、想工作时戒掉手机，保持专注。**
+
+那就把手机放到离工作台很远、没办法随时摸到的地方
+
+
+
+**2、想工作时不被微信、飞书等app打扰**
+
+微信、飞书的通知静默，静音，听不到这些消息。
+
+在电脑端，直接关闭微信和飞书，眼不见心不烦。
+
+
+
+**3、减肥，戒掉零食**
+
+不买零食，或者将零食放到柜子里或者很难拿出来的地方。
+
+
+
+要点：
+
+**如果你想建立一个好习惯，就想办法降低这件事的启动能量；如果你想去除一个坏习惯，就想办法增加这件事的启动能量。**
+
+
+
