每日读书/2-反倦怠能量站(在读).md 每日记录饮食和体重

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -662,3 +662,45 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 
 
+## 6、3 破除“想象中的困难”
+
+对“一项任务到底有多难”的认知很重要，能决定我们做任务的热情，做事的效率，对做的具体事项的热爱程度。
+
+
+
+回想下之前的经历，很多事情做之前以为很难、很复杂、或者很繁琐，做完之后发现并不难。只是因为我之前没做过，大脑对于陌生、不熟悉的事物会感到恐慌，从而给你传递“这件事很难”的想法。
+
+
+
+从客观角度看，一件任务的困难程度是基本恒定的，因为其复杂度的系数是如此。
+
+从主观角度看，一件事的困难度随着你看待它的态度而变化，你在心里觉得它很难，那么他的困难程度就会变大，你心里平静看待这个任务，拆解成一个个小任务，就会觉得它并不难，甚至有种掌控感。
+
+
+
+少内耗，多行动，勇敢的迈出第一步，将大任务一步步拆解为小任务，将单个复杂度高的任务拆解为多个复杂度低的任务，你会发现这个任务并没我们想的那么难。
+
+
+
+**要点：**
+
+**少内耗，多行动，先完成，再慢慢完善，直至完美。**
+
+
+
+## 6、4 使用“5秒法则”迅速行动
+
+5秒法则：在心中倒数5、4、3、2、1，然后一个鲤鱼打挺蹦起来，开始做这件事。
+
+
+
+心理学研究，人之所以会拖延、状态不佳，是因为大脑的“自我保护机制”，大脑想要考虑周全、反复思考，想保证我们不受伤害、少付出成本。
+
+但是这种自我保护机制，往往会导致“过度思考”，让人瞻前顾后、害怕失败、缺少行动力。
+
+
+
+​	**5秒法则有效，是因为大脑还没来得及“思考”开启自我保护机制，你就已经开始做这件事了。**
+
+​	**一旦开始行动，就从思考状态进入了运动状态，大脑就会发现，原来一切没那么可怕，同时打开了收集能量感的路径，通过收获成就感、正反馈、负反馈、对自己能力的自信来推动能量感的积累，从而持续的做该做的事。**
+
