1、每日饮食打卡，记录体重 2、每日读书/2-反倦怠能量站(在读).md

--- a/每日读书/2-反倦怠能量站(在读).md
+++ b/每日读书/2-反倦怠能量站(在读).md
@@ -704,3 +704,22 @@ rust难学吗？因为之前有过rust学习困难并失败的经历，我大脑
 
 ​	**一旦开始行动，就从思考状态进入了运动状态，大脑就会发现，原来一切没那么可怕，同时打开了收集能量感的路径，通过收获成就感、正反馈、负反馈、对自己能力的自信来推动能量感的积累，从而持续的做该做的事。**
 
+
+
+# 第七章：如何利用外部反馈提升能量感和行动力？
+
+在准备“大干一番”之前，好好问下自己：
+
+- 我的行动有获取反馈的渠道吗？
+- 什么样的外部反馈最可能增加我的能量感？
+- 怎样行动才能获得更多的正反馈呢？
+
+
+
+​	大部分人在做一件需要长期坚持的事情时都“无法坚持”，并不是因为缺乏意志力，而是没有找到一套对自己行之有效的“外部反馈”的机制。
+
+
+
+​	做一个为期一个月的项目，很多人不紧不慢的推进，在月末时才觉察到项目进度太慢，做不完了，于是只能延期或者放弃，对自己的能力丧失信息，无法收回之前的能量感。
+
+​	比如在进度这块，可以拆分为4周，做完一周事项，能评估出当前项目的周进度是如何的，反馈能让我们知道自己做了多少，哪里做的好，哪里做的不好，第一周的进度慢了，那么在开始第二周时，我们就需要多花点时间和精力在项目上，快马加鞭的行进，才好把落下的进度赶上来。
